ENH: presentation: fixes

--- a/doc/Notes/UGM2025_ET/themes/esi.css
+++ b/doc/Notes/UGM2025_ET/themes/esi.css
@@ -49,7 +49,9 @@ footer {
   bottom: 15px;
 }
 .columns {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  display: flex;
   gap: 1rem;
+}
+.columns > div {
+  flex: 1 1 0;
 }
